# Prediction_Bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  migrate_sqlite_to_postgres.py  polymarket_api_creds.json.example  pyproject.toml  requirements.txt
.claude/: mcp.json  settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
dashboard/: CLAUDE.md  REVIEW.md  index.html  package-lock.json  package.json  playwright.config.ts  screenshot-themes.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/e2e/: activity.spec.ts  all-pages.spec.ts  debug-navigation.spec.ts  fixtures.ts  markets-manual-order.spec.ts  mocks.ts  overview.spec.ts  performance.spec.ts  positions.spec.ts  risk.spec.ts  screenshot-all-pages.spec.ts  strategy.spec.ts  system.spec.ts
dashboard/playwright-report/: index.html
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: dashboard.ts
dashboard/src/contexts/: ThemeContext.tsx  ToastContext.tsx
dashboard/src/hooks/: useDashboardData.ts  (+1 more)
dashboard/test-results/: .last-run.json
deploy/: README.md
deploy/supervisor/: polymarket.conf
deploy/systemd/: polymarket-bot.service  polymarket-dashboard.service  polymarket-ingestion.service
docs/: CLAUDE_CODE_DOCKER_ISSUES.md  DASHBOARD_DESIGN.md  MARKET_EXPLORER_SPEC.md  TIERED_DATA_ARCHITECTURE.md  USER_GUIDE.md
docs/codex-reviews/: 2024-12-18-architecture-review.md  CODEX_ARCHITECTURE_REVIEW.md
docs/reference/: 01_STORAGE_LAYER_SPEC.md  02_INGESTION_LAYER_SPEC.md  03_STRATEGY_INTERFACE_SPEC.md  04_CORE_AND_EXECUTION_SPEC.md  05_HEALTH_AND_SERVICES_SPEC.md  06_STARTUP_UX_PLAN.md  ADR-001-exit-strategy-architecture.md  README.md  architecture_decisions.md  code_review_2025-12-24.md  known_gotchas.md  legacy_dependency.md
market-explorer/: README.md  TESTING_PLAN.md  docker-compose.yml
market-explorer/backend/: Dockerfile  pyproject.toml  sync_events.py  sync_markets.py  sync_markets_v2.py
market-explorer/backend/seed/: 08_events_table.sql
market-explorer/backend/src/explorer/: __init__.py  config.py
market-explorer/backend/src/explorer/api/: __init__.py  main.py
market-explorer/backend/src/explorer/db/: __init__.py  database.py  repositories.py
market-explorer/backend/src/explorer/models/: __init__.py  market.py
market-explorer/backend/src/explorer/services/: __init__.py  sync_service.py
market-explorer/backend/tests/: __init__.py
market-explorer/backend/tests/unit/: test_api.py  test_models.py  test_repositories.py
market-explorer/e2e/: package-lock.json  package.json  playwright.config.ts
market-explorer/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
market-explorer/scripts/: refresh_markets.sh  sync_markets.sh  tailscale_serve.sh
scripts/: bootstrap_db.sh  migrate_heavy.py  populate_markets.py  rebuild.sh  restart.sh  run_ingestion.py  run_tests.sh  set_clob_allowances.py  setup_test_db.sh  start_dashboards.sh  startup.sh  tailscale_dashboards.sh  test_timestamp_correction.py
scripts/.claude/: settings.local.json
seed/: 01_schema.sql  02_add_condition_id_to_triggers_pk.sql  02_tiered_data.sql  03_add_execution_tables.sql  04_position_sync_fields.sql  05_age_source_exit_fix.sql  06_exit_pending_tracking.sql  07_exit_status_tracking.sql  08_pipeline_visibility.sql
src/polymarket_bot/: __init__.py  main.py  sync_positions.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_critical_stability.py  test_data_flow.py  test_gotcha_regressions.py  test_live_edge_cases.py  test_live_order.py  test_live_resilience.py  test_live_stress.py  test_live_trade_lifecycle.py
(+174 files in other folders)
